# startup/src/main/java/startup/controller/GameController.java
@@ -17,7 +17,7 @@ import java.util.List;
 
 @RestController
 @CrossOrigin
-@RequestMapping("/game")
+@RequestMapping("/games")
 @Api(tags = "Game")
 public class GameController {
 
@@ -56,7 +56,7 @@ public class GameController {
             @ApiResponse(code = HttpStatus.SC_BAD_REQUEST, message = "The request was invalid."),
             @ApiResponse(code = HttpStatus.SC_INTERNAL_SERVER_ERROR, message = "An internal server error occurred.")
     })
-    @GetMapping(value = "/types", produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = {"/types", "/foo"}, produces = MediaType.APPLICATION_JSON_VALUE)
     public @ResponseBody Object getGameTypes() {
         final List<String> gameTypes = this.gameService.getTypes();
 
@@ -86,6 +86,36 @@ public class GameController {
                     .withEntity(game)
                     .withMessage("Game status successfully returned")
                     .build();
+        } catch (final GameNotFoundException e) {
+            response.setStatus(HttpStatus.SC_NOT_FOUND);
+
+            return GenericResponseDto.builder()
+                    .withSuccess(false)
+                    .withMessage("Game was not found")
+                    .build();
+        }
+    }
+
+    @ApiOperation(
+            value = "Starts a game",
+            httpMethod = "POST",
+            response = GenericResponseDto.class)
+    @ApiResponses(value = {
+            @ApiResponse(code = HttpStatus.SC_OK, message = "Game started successfully", response = GenericResponseDto.class),
+            @ApiResponse(code = HttpStatus.SC_BAD_REQUEST, message = "The request was invalid."),
+            @ApiResponse(code = HttpStatus.SC_INTERNAL_SERVER_ERROR, message = "An internal server error occurred.")
+    })
+    @PostMapping(value = "/{gameGuid}",produces = MediaType.APPLICATION_JSON_VALUE)
+    public @ResponseBody Object startGame(@PathVariable final String gameGuid, final HttpServletResponse response) {
+        try {
+            final GameDto game = this.gameService.startGame(gameGuid);
+
+            return GenericResponseDto.builder()
+                    .withSuccess(true)
+                    .withEntity(game)
+                    .withMessage("The game was successfully started")
+                    .build();
+
         } catch (final GameNotFoundException e) {
             response.setStatus(HttpStatus.SC_NOT_FOUND);
 
